# Semi-Fuzzy-Quantifiers

./: CHANGELOG.md  LICENSE  README.md  Semi-Fuzzy-Quantifiers.cabal
.github/workflows/: main.yml
app/: GUI.hs  Game.hs  Main.hs
