cabal-version:      2.4
name:               Semi-Fuzzy-Quantifiers
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             polymorphicengine/tompoise
maintainer:         gius_martin@yahoo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Semi-Fuzzy-Quantifiers
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0,
                      containers,
                      random,
                      threepenny-gui
    hs-source-dirs:   app
    default-language: Haskell2010
